--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <section>
 <h1>main</1>
 </section>
-<aside>
+<div id="side">
+  <aside>
 <h1>side1</h1>
 </aside>
 <aside>
 <h1>side2</h1>
 </aside>
+  </div>
 <footer>
 <h1>footer</h1>
 </footer>
