--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
 <h1>header</h1>
 </header>
+  <div id="main">
 <section>
 <h1>main</1>
 </section>
@@ -21,6 +22,7 @@
 <h1>side2</h1>
 </aside>
   </div>
+    </div>
 <footer>
 <h1>footer</h1>
 </footer>
